objects/Events__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appeals</label>
        <referenceTo>Appeals__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_the_Event__c</fullName>
        <label>Date of the Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Main_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Amount__c</fullName>
        <label>Target Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Raised__c</fullName>
        <label>Total Raised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Events</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Events Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>